小强修改第一次

--- a/阶段性项目任务分配-接口设计(0829).md
+++ b/阶段性项目任务分配-接口设计(0829).md
@@ -4,61 +4,69 @@
 
 ## 殷桂根
 
-**1. 用户接口**  CustomerMapper
+**3. 用户接口**  CustomerMapper
 
 - 用户注册（注册成功即表示登录成功）
 
   ```java
   /**
+   判断手机号是否已经注册过
    @param telno 验证手机号码是否已经注册
-   @return 返回是否是有效的注册手机号，true表示没有注册过，false表示已经注册
+   @return 若该手机号已经注册，则返回已注册的手机号，若没有注册过，则返回null
   */
-  public boolean isValidTelno(Long telno);
+  public Long isValidTelno(Long telno);
+  
   /**
+   判断邮箱是否已经注册过
    @param email 验证邮箱是否已经注册
-   @return 返回是否是有效的注册邮箱，true表示没有注册过，false表示已经注册
+   @return 若该邮箱已经注册，则返回已注册的邮箱，若没有注册过，则返回null
   */
-  public boolean isValidEmail(String email);
+  public String isValidEmail(String email);
   
   /**
-   @param customer 需要注册的会员
-   @return 返回是否注册成功，true表示注册成功，false表示注册失败
+   设置用户密码 ，根据用户ID修改密码
+   @param customer 需要设置密码的用户，该对象封装了新密码
+   @return 返回修改受影响行数 
   */
-  public boolean regist(Customer customer );
+  public int updatePwd(Customer customer);
+  
+  /**
+   新用户注册
+   @param customer 需要注册的会员  
+   @return 返回添加受影响行数 
+  */
+  public int regist(Customer customer );
   
   ```
 
-- 登录LoginMapper
+- 登录 CustLoginMapper
 
   ```java
   /**
-   @param email 登录邮箱  
+   判断用户登录的手机号与密码是否正确
+   @param telno 登录手机号（注册时手机号）  
    @param loginPwd 登录密码
-   @return 返回是否登录成功，0 表示登录成功，1 表示登录失败 ，2 表示账户失效
+   @return 返回登录用户信息，若返回null,表示账户或密码错误
   */
-  public  int login(String email,String loginPwd );
+  public  Customer  checkTelnoAndPwd  (Long telno,String password );  
   
   /**
-   @param telno 用户注册手机号
+   判断用户登录的邮箱与密码是否正确
+   @param email 登录邮箱（注册时的邮箱）  
    @param loginPwd 登录密码
-   @return 返回是否登录成功，0 表示登录成功，1 表示登录失败 ，2 表示账户失效
+   @return 返回登录用户信息，若返回null,表示账户或密码错误
   */
-  public  int login(Long telno,String loginPwd );
-  ```
-
-- 修改用户密码
-
-  ```java
+  public  Customer  checkEmailAndPwd (String email,String password ); 
   /**
-   @param oldPwd 旧密码
-   @param newPwd 新密码
-   @param custId 当前用户ID
-   @return 返回是否设置成功，0 表示重置成功，1 表示重置失败 
+   添加登录记录
+   @param custLogin 用户登录信息对象  
+   @return  返回添加受影响的行数 
   */
-  public  int resetLoginPwd(String oldPwd,String newPwd, Integer custId);
+  public  int save(CustLogin custLogin);
+  
   ```
 
-- 查看用户自己的信息
+  查看用户自己的信息 CustomerMapper
 
 - ```java
   /**
@@ -68,7 +76,7 @@
   public  Customer queryById(Integer custId);
   ```
 
-**2. 品类接口 **CategoryMapper
+**4. 品类接口 **CategoryMapper
 
 - 查看所有鞋子的类别
 
@@ -85,7 +93,7 @@
 
 ## 白育恺
 
-**1. 鞋子接口**ShooesMapper
+**5. 鞋子接口**  ShoesMapper
 
 - 查询所有鞋子
 
@@ -93,17 +101,17 @@
   /**
    @return 返回所有鞋子,默认按照鞋的销量降序排序
   */
-  public  List<Shooes> queryAll();
+  public  List<Shoes> queryAll();
   ```
 
 - 根据鞋子名称查询鞋子信息
 
   ```java
   /**
-   @param shooesName 指定查询的鞋子名称
+   @param shoesName 指定查询的鞋子名称
    @return 返回鞋子名称中包含指定字符串的鞋子列表
   */
-  public  List<Shooes> queryByName(String shooesName);
+  public  List<Shoes> queryByName(String shoesName);
   ```
 
 - 根据鞋子所属性别查询鞋子信息（男子鞋、女子鞋）
@@ -113,17 +121,17 @@
    @param gender 指定查询的鞋子适用的性别，0 表示男性，1 表示女性
    @return 返回指定性别的鞋子对象列表
   */
-  public  List<Shooes> queryByGender(Integer gender);
+  public  List< Shoes> queryByGender(Integer gender);
   ```
 
-- 根据鞋子码数查询鞋子信息
+- 根据鞋子码数查询鞋子信息ShoesDetailMapper
 
   ```java
   /**
    @param size 指定查询的鞋子码数
    @return 返回指定码数的鞋子对象列表
   */
-  public  List<Shooes> queryBySize(Float size);
+  public  List<ShoesDetail> queryBySize(Float size);
   ```
 
 - 根据鞋子价格范围查询鞋子信息
@@ -134,7 +142,7 @@
    @param maxPrice 指定查询的鞋子的最大价格，若大小价格为null,则只按最小价格查询
    @return 返回指定价格范围内的鞋子对象列表
   */
-  public  List<Shooes> queryByPrice(Float minPrice,Float maxPrice);
+  public  List<Shoes> queryByPrice(Float minPrice,Float maxPrice);
   ```
 
 - 根据鞋子的类别查看鞋子信息
@@ -144,10 +152,20 @@
    @param categoryId 指定的鞋子类别ID
    @return 返回指定类别中的所有鞋子对象列表
   */
-  public  List<Shooes> queryByCategory(Integer categoryId);
+  public  List<Shoes> queryByCategory(Integer categoryId);
   ```
 
+1. **鞋子图片接口 ** ShoesImageMapper
 
+   查询指定商品的所有图片（根据排序号sort_no显示）
+
+   ```java
+   /**
+    @param shooesId 指定的鞋子ID
+    @return 返回指定鞋子的所有图片
+   */
+   public List<ShoesImg> queryAllImgByShooesId(Integer shooesId);
+   ```
 
 **2.鞋子图片接口**
 
@@ -167,7 +185,7 @@ public List<ShooesImg> queryAllImgByShooesId(Integer shooesId);
 
 ## 吴冬前
 
-1. **收件地址接口**
+1. **收件地址接口 **ReceiveAddressMapper
 
 - 添加当前用户新收件地址
 
@@ -175,9 +193,9 @@ public List<ShooesImg> queryAllImgByShooesId(Integer shooesId);
   /**
    @param newAddress 新增的收件地址对象
    @param custId 当前用户ID
-   @return 返回是否添加成功,true表示添加成功，false表示添加失败
+   @return 返回受影响行数
   */
-  public  boolean save(Address newAddress，Integer custId);
+  public  int save(Address newAddress，Integer custId);
   ```
 
 - 删除当前用户的收件地址
@@ -186,9 +204,9 @@ public List<ShooesImg> queryAllImgByShooesId(Integer shooesId);
   /**
    @param addressId 要删除的收件地址ID
    @param custId 当前用户ID
-   @return 返回是否删除成功,true表示删除成功，false表示删除失败
+   @return 返回受影响行数
   */
-  public  boolean delete(Integer addressId，Integer custId);
+  public  int delete(Integer addressId，Integer custId);
   ```
 
 - 修改当前用户收件地址的信息
@@ -197,9 +215,9 @@ public List<ShooesImg> queryAllImgByShooesId(Integer shooesId);
   /**
    @param address 要修改的收件地址对象
    @param custId 当前用户ID
-   @return 返回是否修改成功,true表示修改成功，false表示修改失败
+   @return 返回受影响行数
   */
-  public  boolean update(Address address，Integer custId);
+  public  int update(Address address，Integer custId);
   ```
 
 - 查看当前用户所有收件地址列表
@@ -218,81 +236,74 @@ public List<ShooesImg> queryAllImgByShooesId(Integer shooesId);
   /**
    @param addressId 要设置为默认收件地址的地址ID
    @param custId 当前用户ID
-   @return 返回是否修改成功,true表示修改成功，false表示修改失败
+   @return 返回受影响行数
   */
-  public  boolean updateDefaultAddress(Integer addressId，Integer custId);
+  public  int updateDefaultAddress(Integer addressId，Integer custId);
   ```
-
-
-
-
 
 
 
 ## 姜明锐
 
-** 1.购物车接口
-
 - 添加商品至购物车  
 
   ```java
   /**
-   @param shooes 要添加至购物车中的鞋对象
+   @param shoesDetail 要添加至购物车中的鞋对象
    @param custId 当前用户ID
-   @return 返回是否添加成功,true表示添加成功，false表示添加失败
+   @return 返回受影响行数
   */
-  public  boolean save(Shooes shooes，Integer custId);
+  public  int save(ShoesDetail shoesDetail，Integer custId);
   ```
 
 - 删除购物车中的商品
 
-  > ```java
-  > /**
-  >  @param shooes 要从购物车中删除的鞋对象
-  >  @param custI		d 当前用户ID
-  >  @return 返回是否删除成功,true表示删除成功，false表示删除失败
-  > */
-  > //有問題 shoesDetail
-  > public  boolean delete(Shooes shooes，Integer custId);
-  > ```
+  ```java
+  /**
+   @param shoesDetail 要从购物车中删除的鞋对象
+   @param custId 当前用户ID
+   @return 返回受影响行数
+  */
+  public  int delete(ShoesDetail shoesDetail，Integer custId);
+  ```
 
 - 修改购物车中的商品数量
 
   ```java
   /**
-   @param shooesId 要修改的购物车中鞋ID
+   @param shoes_detail_id 要修改的购物车中鞋ID
    @param custId 当前用户ID
    @param count 购物车中该鞋子的数量
-   @return 返回是否删除成功,true表示删除成功，false表示删除失败
+   @return 返回受影响行数
   */
-  public  boolean updateCount(Integer shooesId，Integer custId,Integer count);
+  public  int updateCount(Integer shoes_detail_id，Integer custId,Integer count);
   ```
 
-**2.鞋子尺码接口**
+1. **鞋子尺码接口** ShoesSizeMapper
 
-查询指定款式上的所有尺码
+   查询指定款式上的所有尺码
 
-```java
-/**
- @param shooesId 指定的鞋子ID
- @return 返回指定鞋子的所有尺码
-*/
-public List<ShooesSize> queryAllSizeByShooesId(Integer shooesId);
-```
+   ```java
+   /**
+    @param shooesId 指定的鞋子ID
+    @return 返回指定鞋子的所有尺码
+   */
+   public List<ShoesSize> queryAllSizeByShooesId(Integer shooesId);
+   ```
 
-**3.鞋子颜色接口**
+2. **鞋子颜色接口**  ShoesColorMapper
 
-查询指定款式上的所有颜色
+   查询指定款式上的所有颜色
 
-```java
-/**
- @param shooesId 指定的鞋子ID
- @return 返回指定鞋子的所有颜色
-*/
-public List<ShooesColor> queryAllColorByShooesId(Integer shooesId);
-```
+   ```java
+   /**
+    @param shooesId 指定的鞋子ID
+    @return 返回指定鞋子的所有颜色
+   */
+   public List<ShooesColor> queryAllColorByShooesId(Integer shooesId);
+   ```
 
-
+   
 
 
 
@@ -307,15 +318,15 @@ public List<ShooesColor> queryAllColorByShooesId(Integer shooesId);
   ```java
   /**
    @param order 添加的新订单对象
-   @return 返回是否添加订单成功,true表示添加成功，false表示添加失败
+   @return 返回受影响行数
   */
-  public  boolean save(MyOrder order); 
+  public  int save(MyOrder order); 
   
   /**
    @param orderDetail 添加的新订单详情对象
-   @return 返回添加新订单详情是否成功,true表示添加成功，false表示添加失败
+   @return 返回受影响行数
   */
-  public  boolean saveDetails(OrderDetail orderDetail); 
+  public  int saveDetails(OrderDetail orderDetail); 
   
   ```
 
@@ -333,11 +344,11 @@ public List<ShooesColor> queryAllColorByShooesId(Integer shooesId);
 
   ```java
   /**
-   @param shooesName 要查询的鞋的名称（模糊查询）
+   @param shoesName 要查询的鞋的名称（模糊查询）
    @param custId 当前用户的ID
    @return 返回当前用户的要查询的订单列表
   */
-  public  List<MyOrder> queryByShooesName(String shooesName,Integer custId); 
+  public  List<MyOrder> queryByShooesName(String shoesName,Integer custId); 
   ```
 
 - 根据订单编号查询订单
@@ -357,9 +368,9 @@ public List<ShooesColor> queryAllColorByShooesId(Integer shooesId);
   /**
    @param status  修改订单状态
    @param orderId  指定的要修改的订单ID
-   @return  返回是否修改成功，true表示修改成功，false表示修改失败
+   @return  返回受影响行数
   */
-  public   boolean updateStatus(Integer status,Integer orderId); 
+  public   int updateStatus(Integer status,Integer orderId); 
   ```
 
 
